--- a/doc/thesis/intro.tex
+++ b/doc/thesis/intro.tex
@@ -265,7 +265,7 @@ the best fit.
 
 \section{Noise}
 \label{sec:Introduction Noise}
-As demonstrated in \autoref{sec:BOLD Phsyiology} the BOLD response has been
+As demonstrated in \autoref{sec:BOLD Physiology} the BOLD response has been
 extensively studied and despite minor discrepancies, the cause of the BOLD 
 signal is well known. However, as FMRI detects an  
 aggregate signal over the space of cubic centimeters, there are
@@ -300,8 +300,7 @@ very long sequences could give the patient time for his mind to wander.
 Overall though there should be no activation, and thus the signal will
 consist entirely of noise. Therefore resting state data is perfect
 for analyzing the noise distribution. The locations were chosen from
-various points around the brain, all in grey matter voxels (see \autoref{sec:methods}
-for a discussion on how grey matter voxels were found). The time
+various points around the brain, all in grey matter voxels. The time
 series were also chosen because they were representative of different types
 of noise I found in the resting state data.
 
@@ -316,7 +315,7 @@ Normal distribution. Additionally, in FMRI data the noise is often considered
 to be Wiener \cite{Riera2003}. Recall that a Wiener random process is
 characterized by steps that are Gaussian; in other words the difference between
 any two samples is Normally distributed. The simulations discussed in 
-\autoref{sec:Methods Single Voxel Simulation} make use of this, 
+\autoref{sec:Single Voxel Simulation} make use of this, 
 by adding a Wiener random process to the overall signal. To determine
 whether the noise is in fact Wiener, the distribution of 
 the difference between adjacent measurements was plotted against
