--- a/doc/thesis/results.tex
+++ b/doc/thesis/results.tex
@@ -20,6 +20,7 @@ noise realization. Therefore the Possum simulation should also provide a good
 test of the consistency of the BOLD model. 
 
 \section{Single Time Series}
+\label{sec:Single Voxel Simulation}
 Given the state-space equations for the BOLD signal, simulating a single time 
 series is relatively straight forward. After a "true" signal is generated,
 identically and independently distributed (I.I.D.) Gaussian noise and a Wiener
@@ -48,6 +49,7 @@ particularly large.
 
 %LOW NOISE SECTION, with a signal
 \subsection{Signal with Low Noise}
+\label{sec:SimLowNoise}
 %tests had noise of $ \{\sigma_y = .01, \sigma_x = .005\} $, where $\sigma_y$ is the
 %measurement noise, and $\sigma_x$ is the wiener step size. Both signals used the
 %parameters .
