--- a/doc/thesis/intro.tex
+++ b/doc/thesis/intro.tex
@@ -231,7 +231,7 @@ were in fact showing a return to baseline by arterial CBV.
 
 Regardless of the probability that CMRO2 and CBF are detached,
 research into the post-stimulus undershoot has led to the creation
-of much more in depth models. In \cite{Zhen2002} additional state
+of much more in depth models. In \cite{Zheng2002} additional state
 variables model oxygen transport, whereas \cite{Buxton2004} models
 CMR02 from a higher level, and somewhat more simply; though it 
 still adds several new parameters. \cite{Behzadi2005}
@@ -457,9 +457,4 @@ wasn't calculated. \cite{Vakorin2007} made use of the values from \cite{Friston2
 where not explicitly stated}
 \label{tab:Params} 
 \end{table}
-
-Necessary?
-[Image with two different $\alpha$'s]
-[image comparing the results of 10\% changes in various signals]
-
 
