--- a/doc/thesis/particlefilters.tex
+++ b/doc/thesis/particlefilters.tex
@@ -444,8 +444,7 @@ the output. It is logical to assume this error is centered at zero and
 has a scale comparable to the signal levels.
 While a Gaussian function is the traditional choice, I wanted to try other
 distributions as well, given the unpredictable nature of the noise present in FMRI.
-The choice of this function will be discussed further in \autoref{sec:Methods
-Weighting Function}.
+The choice of this function will be discussed further in \autoref{sec:Methods Weighting Function}.
 
 \begin{figure}
 \includegraphics[width=16cm]{images/particle_filter}
