--- a/doc/thesis/resultsB.tex
+++ b/doc/thesis/resultsB.tex
@@ -81,7 +81,7 @@ mapping with SPM's T-score map.
 \section{Results}
 
 The results from SPM8 are shown in \autoref{fig:hm_canon_spm}, and the results from 
-the particle filter are shown in \autoref{hm_canon_pfilter}. Note again that the
+the particle filter are shown in \autoref{fig:hm_canon_pfilter}. Note again that the
 output is actually a different scale. Whereas the levels in the SPM map are T-Scores
 indicating the probability that the result cannot be explained from a random signal,
 the result of the particle filter is simply a normalized square-root of the mean-squared-
