--- a/doc/thesis/background.tex
+++ b/doc/thesis/background.tex
@@ -115,19 +115,21 @@ will also have a bias toward the visual cortex, precisely because
 it is so well studied.
 
 \begin{figure}
-\caption{Hemodynamic Response Function todo}
+\centering
+\includegraphics[scale=.7]{images/HRF}
+\caption{Canonical Hemodynamic Response Function}
 \label{fig:HRF}
 \end{figure}
 
 \subsection{Hierarchical Linear Models}
 As mentioned previously and discussed extensively
-in \cite{Friston2002} and \cite{Hoffman1997}, hierarchical models may be 
+in \cite{Friston2002} and \cite{Hofmann1997}, hierarchical models may be 
 applied to account for systematic differences between subjects. For instance, if the
 study happens to be a mix between young and old, incorporating
 that into the model is wise, regardless if that is the purpose of the test. 
 The reason to do this is to account for additional variance that may not
 be present in similar studies. The Hierarchical form used by
-\cite{Friston2002} is shown in \autoref{eq:Hiearchical}.
+\cite{Friston2002} is shown in \autoref{eq:Hierarchical}.
 
 \begin{eqnarray}
 \label{eq:Hierarchical}
@@ -138,10 +140,10 @@ Y(t) = X_1(t)\theta_1 + \epsilon_1(t)            \nonumber \\
 \end{eqnarray}
 
 The Empirical Bayes algorithm is used in both in both \cite{Friston2002} 
-and \cite{Hoffman1997}. As a consequence, point estimators 
+and \cite{Hofmann1997}. As a consequence, point estimators 
 are used for each $\theta$, rather than the full distributions.
 
-\subsection{Conclusion}
+\subsection{Discussion}
 \label{sec:BackgroundConclusion}
 In all, the GLM is extremely useful for determining linear 
 dependence of a set of regressors on the output. Unfortunately, as discussed in
@@ -157,7 +159,7 @@ The static nature of the  linear model also limits its inference power.
 Besides not permitting HRF differences between patients, there is no
 reasonable way to incorporate other forms of physiological
 data. Combined FMRI CBF or CBV imaging methods are rapidly getting better,
-as seen in \cite{Chan2009}. These techniques could shed light on
+as seen in \cite{Chen2009}. These techniques could shed light on
 neural activation by providing extra measurements, yet a 
 physiologically reasonable model is necessary for this.
 In reverse, activation detection methods also don't have the ability 
@@ -308,8 +310,8 @@ it can be quite effective.
 Although both these methods can be highly effective, they have the downside of
 requiring very high computation time. In this case of the BOLD model,
 each time the energy or fitness needs to be calculated, a large number of cycles
-must be spent re-simulating the BOLD model for the set of parameters. As we'll
-discuss in \autoref{sec:Particle Filters}, the Particle Filter method is able
+must be spent re-simulating the BOLD model for the set of parameters. As I'll
+discuss in \autoref{sec:Particle Filter}, the Particle Filter method is able
 to circumvent this re-calculation to some degree.
 
 \subsection{Unscented Kalman Filter}
@@ -464,7 +466,6 @@ two or three parameters this is fine, more than that, and calculations can becom
 intractable. Additionally, there is no way to ensure a global minimum is reached.
 Although this is also true of the methods in \autoref{sec:Nonlinear Least Squares},
 those methods contained random elements designed to overcome this issue.
-[results?]
 
 In \cite{Johnston2008}, a hybrid particle filter/gradient
 descent algorithm was used to simultaneously derive the static and dynamic 
@@ -478,15 +479,14 @@ to the original \cite{Friston2000} estimates (\autoref{tab:Params}). In fact the
 are significantly different from virtually every other study. The most obvious discrepancy
 is the significantly longer time constants, $\tau_f$, $\tau_s$ and $\tau_0$. 
 While of course this could be poor convergence of the algorithm, there is another other possibility.
-Unlike all the other methods mentioned, excepting the methods in \autoref{sec:Least Squares},
+Unlike all the other methods mentioned, excepting the methods in \autoref{sec:Nonlinear Least Squares},
 the algorithm described in \cite{Johnston2008} does not depend on prior distributions.
 It is possible then that the bias toward the prior in other methods screwed the results. 
 While \cite{Johnston2008} is certainly in the minority; further exhaustive studies 
-of the parameters, using unbiased techniques may be called for. 
-
-[graph of friston parameters vs. johnston]
-
-[might want to mention dynamic causal modeling]
+of the parameters, using unbiased techniques may be called for. A further 
+comparison between the distributions found in \cite{Johnston2008} and 
+\cite{Friston2000} will be discussed in \autoref{sec:PriorDist}, including
+graphs: \autoref{fig:MeanResponseF}, \autoref{fig:MeanResponseJ}.
 
 \section{Conclusion}
 Clearly there is no ideal solution to solving this system of nonlinear
